yo/app/styles/main.css
body {
  	background: url('https://lh3.googleusercontent.com/CB1q7HN0W8q09NAzbB6LRziZRzVHt1nlaC50uPkKErqOhGaN6GuIQpRnq5o0atLKXgCXPeb0nDTwqtpmhN5i=s0') 0 0 repeat;
  	padding-top: 0;
}

a[ng-click] {
	cursor: pointer;
}

.inline-block {
	display: inline-block;
}

.block {
	display: block;
}

.main {
	background: url('https://lh3.googleusercontent.com/CB1q7HN0W8q09NAzbB6LRziZRzVHt1nlaC50uPkKErqOhGaN6GuIQpRnq5o0atLKXgCXPeb0nDTwqtpmhN5i=s0') 0 0 repeat;
	width: 100%;
	height: 100%;
	/*min-height: 800px;*/
	margin: 0 auto;
	/*box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.75);*/
	border-bottom-right-radius: 20px;
	border-bottom-left-radius: 20px;
}

.main-container-nolanding {
  margin-top: 60px;
}

.main-panel {
  background-color: white;
  padding: 0;
  max-width: 450px;
  margin: auto;
  padding-bottom: 50px;
}

.main-panel-nolanding {
  float: left;

}

.upvote {
  color: #5cb85c;
}

.downvote {
  color: #d9534f;
}

.modal-backdrop.am-fade {
  opacity: .5;
  transition: opacity .15s linear;
  &.ng-enter {
    opacity: 0;
    &.ng-enter-active {
      opacity: .5;
    }
  }
  &.ng-leave {
    opacity: .5;
    &.ng-leave-active {
      opacity: 0;
    }
  }
}

.float-right {
  float: right;
}

.pointer {
  cursor: pointer;
}

.panel-no-border {
  padding: 15px;
}

textarea.form-control {
  min-height: 100px;
 resize: none;
 transition: 0.05s;
 -moz-transition: 0.05s;
 -webkit-transition: 0.05s;
 -o-transition: 0.05s;
}

@media screen and (min-height: 700px) {
    .main-panel {
        max-width: 600px;
    }
}

@media screen and (min-height: 800px) {
    .main-panel {
        min-width: 600px;
        max-width: 750px;
    }
}

@media screen and (min-height: 900px) {
    .main-panel {
        min-width: 750px;
        max-width: 800px;
    }
}

@media screen and (max-width: 1120px) {
    .main-panel-nolanding {
        float: none;
    }
}

@media screen and (max-width: 1020px) {
    .main-panel {
        min-width: 800px;
        max-width: 900px;
    }
}

